--- a/Websites/home.html
+++ b/Websites/home.html
@@ -35,7 +35,7 @@
       <main>
         <article>
           <section id="intro">
-            <h2>Intro</h2>
+            <h2>introduction2</h2>
             <p>
               BMW M Series cars represent the pinnacle of performance and
               engineering. Born from a rich motorsport heritage, these vehicles
