--- a/Websites/Shopping-Cart.html
+++ b/Websites/Shopping-Cart.html
@@ -12,8 +12,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
 
-  <!-- Your Custom Styles -->
-  <link rel="stylesheet" href="/AutopartsStore/css/Style.css">
+      <link rel="stylesheet" href="/Websites/css/Style.css">
 </head>
 <body>
 
