Updated all web pages to fix the css bug

--- a/Websites/home.html
+++ b/Websites/home.html
@@ -20,7 +20,7 @@
 <!-- Navigation Bar -->
 <nav class="navbar">
   <div class="logo">
-      <a href="Home.html"> <img src="images/b9538802-0031-4cf1-9e27-7aed700611a2.png" alt="Store Logo"></a>
+      <a href="home.html"> <img src="images/b9538802-0031-4cf1-9e27-7aed700611a2.png" alt="Store Logo"></a>
   </div>
   <!-- Add Images later -->
   <div class="nav-links">
