--- a/Websites/Account.html
+++ b/Websites/Account.html
@@ -21,7 +21,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="logo">
-          <a href="Home.html"> <img src="images/b9538802-0031-4cf1-9e27-7aed700611a2.png" alt="Store Logo"></a>
+          <a href="home.html"> <img src="images/b9538802-0031-4cf1-9e27-7aed700611a2.png" alt="Store Logo"></a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Search...">
