--- a/Websites/Account.html
+++ b/Websites/Account.html
@@ -44,7 +44,7 @@
 <!-- breadcrumb/ directory  -->
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="Home.html">Home</a></li>
+      <li class="breadcrumb-item"><a href="home.html">Home</a></li>
       <li class="breadcrumb-item active" aria-current="page">Account</li>
     </ol>
   </nav>
