--- a/Websites/Product-Listing.html
+++ b/Websites/Product-Listing.html
@@ -20,7 +20,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="logo">
-            <a href="Home.html"> <img src="images/b9538802-0031-4cf1-9e27-7aed700611a2.png" alt="Store Logo"></a>
+            <a href="home.html"> <img src="images/b9538802-0031-4cf1-9e27-7aed700611a2.png" alt="Store Logo"></a>
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Search...">
@@ -42,7 +42,7 @@
 <!-- breadcrumb/ directory  -->
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="Home.html">Home</a></li>
+        <li class="breadcrumb-item"><a href="home.html">Home</a></li>
         <li class="breadcrumb-item active" aria-current="page">All Products</li>
       </ol>
     </nav>
