--- a/Websites/Shopping-Cart.html
+++ b/Websites/Shopping-Cart.html
@@ -22,7 +22,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar">
     <div class="logo">
-      <a href="Home.html">
+      <a href="home.html">
         <img src="images/b9538802-0031-4cf1-9e27-7aed700611a2.png" alt="Store Logo">
       </a>
     </div>
@@ -43,7 +43,7 @@
   </header>
   <nav aria-label="breadcrumb" class="px-4">
     <ol class="breadcrumb bg-white">
-      <li class="breadcrumb-item"><a href="Home.html">Home</a></li>
+      <li class="breadcrumb-item"><a href="home.html">Home</a></li>
       <li class="breadcrumb-item active" aria-current="page">Shopping Cart</li>
     </ol>
   </nav>
