--- a/Websites/home.html
+++ b/Websites/home.html
@@ -24,7 +24,7 @@
   </div>
   <!-- Add Images later -->
   <div class="nav-links">
-      <a id="link-show-cart" href="Product-Listing.html">Products20</a>
+      <a id="link-show-cart" href="Product-Listing.html">Products</a>
       <a href="Shopping-Cart.html">Cart</a>
       <a href="Account.html">Account</a>
       <a href="map.html">Map</a>
